2006-09-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Syntactic sugar in form of "length", "show" and "summary"
	operators

2006-08-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Diverse updates. Mainly on default operators ("[" or "c")
	and dissimilarities.

2006-08-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Added similarity functions.

	* data/: Added english stopwords.

2006-08-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* data/: Examples compiled for new features

	* R/: Changes due to new structure.

	* NAMESPACE: Corrected namespace to reflect new structure.

	* R/termdocmatrix.R: Adapted for new naming scheme.

2006-08-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Adapted code for new class structure. Wrote
	several transform and filter functions operating on text document
	collections (alias text document databases).

	* R/aobjects.R: Adapted class structure with inheritance,
	repositories and additional meta data. Loading files on demand is
	now possible.

2006-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Some cosmetic cleanups.

	* inst/: Removed vignette on clustering. That and much more is now
	described in the JSS paper on text mining. Based upon that
	article an elaborated vignette will be incorporated in the future.

2006-07-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Updated generic S4 methods to comply with signature changes
	in newer versions of R (> 2.3)

2006-03-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* ext/R/importRIS.R: Automatic RIS import is now possible.

2006-02-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Added RIS HTML input format.

2006-01-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Removed bug that caused invalid text document
	collections when handling many input files.

2006-01-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Restructured and extended file import
	mechanism.
