@@ -1,7 +1,12 @@
+2006-09-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Further syntactic sugar in form of additional assignment and
+	accessor methods.
+
 2006-09-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Syntactic sugar in form of "length", "show" and "summary"
-	operators
+	operators.
 
 2006-08-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
